modules/XForms/generated.jai


/* Replace the value of a particular point in dataset setID,
* where setID=0 is the first data set.
* This routine is an extension of fl_replace_xyplot_point
* which acts on the first dataset only. */
fl_replace_xyplot_point_in_overlay :: (ob: *FL_OBJECT, i: s32, setID: s32, x: float64, y: float64) -> void #foreign libforms;

fl_get_xyplot_xmapping :: (ob: *FL_OBJECT, a: *float, b: *float) -> void #foreign libforms;

fl_get_xyplot_ymapping :: (ob: *FL_OBJECT, a: *float, b: *float) -> void #foreign libforms;

fl_set_xyplot_keys :: (ob: *FL_OBJECT, keys: **u8, x: float, y: float, align: s32) -> void #foreign libforms;

fl_set_xyplot_key :: (ob: *FL_OBJECT, id: s32, key: *u8) -> void #foreign libforms;

fl_set_xyplot_key_position :: (ob: *FL_OBJECT, x: float, y: float, align: s32) -> void #foreign libforms;

fl_set_xyplot_key_font :: (ob: *FL_OBJECT, style: s32, size: s32) -> void #foreign libforms;

fl_get_xyplot_numdata :: (ob: *FL_OBJECT, id: s32) -> s32 #foreign libforms;

/* The following two functions will be removed.
* Use fl_set_object_l[size|style] for the functionalities */
fl_set_xyplot_fontsize :: (ob: *FL_OBJECT, size: s32) -> void #foreign libforms;

fl_set_xyplot_fontstyle :: (ob: *FL_OBJECT, style: s32) -> void #foreign libforms;

fl_xyplot_s2w :: (ob: *FL_OBJECT, sx: float64, sy: float64, wx: *float, wy: *float) -> void #foreign libforms;

fl_xyplot_w2s :: (ob: *FL_OBJECT, wx: float64, wy: float64, sx: *float, sy: *float) -> void #foreign libforms;

fl_set_xyplot_xscale :: (ob: *FL_OBJECT, scale: s32, base: float64) -> void #foreign libforms;

fl_set_xyplot_yscale :: (ob: *FL_OBJECT, scale: s32, base: float64) -> void #foreign libforms;

fl_clear_xyplot :: (ob: *FL_OBJECT) -> void #foreign libforms;

fl_set_xyplot_linewidth :: (ob: *FL_OBJECT, id: s32, lw: s32) -> void #foreign libforms;

fl_set_xyplot_xgrid :: (ob: *FL_OBJECT, xgrid: s32) -> void #foreign libforms;

fl_set_xyplot_ygrid :: (ob: *FL_OBJECT, ygrid: s32) -> void #foreign libforms;

fl_set_xyplot_grid_linestyle :: (ob: *FL_OBJECT, style: s32) -> s32 #foreign libforms;

fl_set_xyplot_alphaxtics :: (ob: *FL_OBJECT, m: *u8, s: *u8) -> void #foreign libforms;

fl_set_xyplot_alphaytics :: (ob: *FL_OBJECT, m: *u8, s: *u8) -> void #foreign libforms;

fl_set_xyplot_fixed_xaxis :: (ob: *FL_OBJECT, lm: *u8, rm: *u8) -> void #foreign libforms;

fl_set_xyplot_fixed_yaxis :: (ob: *FL_OBJECT, bm: *u8, tm: *u8) -> void #foreign libforms;

fl_interpolate :: (wx: *float, wy: *float, nin: s32, x: *float, y: *float, grid: float64, ndeg: s32) -> s32 #foreign libforms;

FL_XYPLOT_SYMBOL :: #type (unknown0: *FL_OBJECT, unknown1: s32, unknown2: *FL_POINT, unknown3: s32, unknown4: s32, unknown5: s32) -> void #c_call;

fl_set_xyplot_symbol :: (ob: *FL_OBJECT, id: s32, symbol: FL_XYPLOT_SYMBOL) -> FL_XYPLOT_SYMBOL #foreign libforms;

fl_set_xyplot_mark_active :: (ob: *FL_OBJECT, y: s32) -> s32 #foreign libforms;

fl_get_xyplot_screen_area :: (obj: *FL_OBJECT, llx: *FL_Coord, lly: *FL_Coord, urx: *FL_Coord, ury: *FL_Coord) -> void #foreign libforms;

fl_get_xyplot_world_area :: (obj: *FL_OBJECT, llx: *float, lly: *float, urx: *float, ury: *float) -> void #foreign libforms;

fl_set_xyplot_log_minor_xtics :: (obj: *FL_OBJECT, yesno: s32) -> s32 #foreign libforms;

fl_set_xyplot_log_minor_ytics :: (obj: *FL_OBJECT, yesno: s32) -> s32 #foreign libforms;

fl_set_xyplot_mouse_buttons :: (obj: *FL_OBJECT, mouse_buttons: u32) -> void #foreign libforms;

fl_get_xyplot_mouse_buttons :: (obj: *FL_OBJECT, mouse_buttons: *u32) -> void #foreign libforms;

fl_gc_ :: () -> GC #foreign libforms;
fl_textgc_ :: () -> GC #foreign libforms;
fl_fheight_ :: () -> s32 #foreign libforms;
fl_fdesc_ :: () -> s32 #foreign libforms;
fl_cur_win_ :: () -> Window #foreign libforms;
fl_cur_fs_ :: () -> *XFontStruct #foreign libforms;
fl_display_ :: () -> *Display #foreign libforms;

#scope_file

#import "Basic"; // For assert, push_context

libforms :: #library,no_dll ".//libforms";

#run {
    {
        info := type_info(FL_PUP_ENTRY);
        for info.members {
            if it.name == {
                case "text";
                    assert(it.offset_in_bytes == 0, "FL_PUP_ENTRY.text has unexpected offset % instead of 0", it.offset_in_bytes);
                    assert(it.type.runtime_size == 8, "FL_PUP_ENTRY.text has unexpected size % instead of 8", it.type.runtime_size);
                case "callback";
                    assert(it.offset_in_bytes == 8, "FL_PUP_ENTRY.callback has unexpected offset % instead of 8", it.offset_in_bytes);
                    assert(it.type.runtime_size == 8, "FL_PUP_ENTRY.callback has unexpected size % instead of 8", it.type.runtime_size);
                case "shortcut";
                    assert(it.offset_in_bytes == 16, "FL_PUP_ENTRY.shortcut has unexpected offset % instead of 16", it.offset_in_bytes);
                    assert(it.type.runtime_size == 8, "FL_PUP_ENTRY.shortcut has unexpected size % instead of 8", it.type.runtime_size);
                case "mode";
                    assert(it.offset_in_bytes == 24, "FL_PUP_ENTRY.mode has unexpected offset % instead of 24", it.offset_in_bytes);
                    assert(it.type.runtime_size == 4, "FL_PUP_ENTRY.mode has unexpected size % instead of 4", it.type.runtime_size);
            }
        }
        assert(size_of(FL_PUP_ENTRY) == 32, "FL_PUP_ENTRY has size % instead of 32", size_of(FL_PUP_ENTRY));
    }
